--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+    <link rel="stylesheet" href="w3.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href='https://fonts.googleapis.com/css?family=Abel' rel='stylesheet'>
     <link rel="shortcut icon" type="/png" href="pp.jpg"/>
     
-    <title>NFSS Election</title>
+    <title>NFSS Election - Home</title>
 </head>
 <body style="font-family: 'Abel';font-size: 22px;">
     <div class="w3-container w3-center" style="font-size:1.3em; margin-bottom: 10px">
@@ -59,7 +59,7 @@
       <div class="w3-center"><br>
      </div>
 
-      <form class="w3-container" action="/vote.html">
+      <form class="w3-container" action="vote.html">
         <div class="w3-section">
           <label><b>Firstname</b></label>
           <input class="w3-input w3-border w3-margin-bottom" type="text" placeholder="Enter Firstname" name="usrname" required>
@@ -84,22 +84,7 @@
 
   </div>
 
-  <footer class="w3-container">
-      <div class="w3-content w3-center w3-border-bottom"><h2>Sponsors</h2></div>
-      <div class="w3-row">
-          <div class="w3-half w3-center">
-              <img src="fanmilk.jpeg" alt="">
-          </div>
-          <div class="w3-half  w3-center" style="padding:40px 0px">
-                <img src="love.jpeg" height="150px" alt="">
-            </div>
-      </div>
-      <div class=" w3-container w3-center w3-teal" style="padding: 0px">
-          All Rights Reserved<br/>
-          <span>Powered by Winteckgh</span><br/>
-           <span> Developed by Samjay</span>
-        </div>
-  </footer>
+ 
     </div>
  </body>
 </html>
