--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     
     <title>NFSS Election - Home</title>
 </head>
-<body style="font-family: 'Abel';font-size: 22px;">
+<body class="w3-container-fluid" style="font-family: 'Abel';font-size: 22px;">
     <div class="w3-container w3-center" style="font-size:1.3em; margin-bottom: 10px">
         <div class="w3-row">
             <div class="w3-quarter">
@@ -25,16 +25,16 @@
             </div>    
         </div>
            </div>
-
-    <div class="w3-content w3-display-container"></div>
-    <div class="w3-content w3-section" style="max-width:100%;"> 
-          <img  src="contactus.jpg" style="width:100%; max-height: 550px; min-height: 390px; margin-top: 0px">
-          <div class="w3-padding w3-display-middle w3-large w3-center" style="background:rgb(26, 2, 134); opacity:0.6;">
+ 
+    <div class=" w3-display-container" style="max-width:100%;"> 
+          <img  src="contactus.jpg" style="width:100%; max-height: 550px; min-height: 390px;">
+          <div class=" w3-display-middle w3-large w3-center" style="background:rgb(26, 2, 134); opacity:0.6;">
                   <button onclick="document.getElementById('id01').style.display='block'"
                     class="w3-btn w3-hover-blue" style="font-size:3.3em; font-style:oblique; color:#ff7300;
                   line-height:1.0;">Start 
                    <span style=" color:#fff;">Vote</span></button> 
-          </div>  
+          </div> 
+     </div> 
           
   <div id="id01" class="w3-modal">
     <div class="w3-modal-content">
@@ -83,8 +83,23 @@
 
 
   </div>
-
- 
+  <footer class="w3-container-fluid"  style="margin-top: 40px;">
+    <div class="w3-content w3-center w3-border-bottom"><h2>Sponsors</h2></div>
+    <div class="w3-row">
+        <div class="w3-half w3-center">
+            <img src="fanmilk.jpeg" alt="">
+        </div>
+        <div class="w3-half  w3-center" style="padding:40px 0px">
+              <img src="love.jpeg" height="150px" alt="">
+          </div>
     </div>
+    <div class=" w3-container w3-center w3-teal" style="padding: 0px">
+        All Rights Reserved<br/>
+        <span>Powered by Winteckgh</span><br/>
+         <span> Developed by Samjay</span>
+      </div>
+</footer>
+ 
+  
  </body>
 </html>
