--- a/vote_pres.html
+++ b/vote_pres.html
@@ -13,10 +13,10 @@
 </head>
 <body style="font-family: 'Abel';font-size: 22px;">
    
-    <div class="w3-container ">
+    <div class="w3-container-fluid ">
         <div class="w3-row w3-teal" style="padding:25px">
             <div class="w3-twothird"><h1>President</h1></div>
-            <div class="w3-third w3-center"><h2 class="w3-hover-green w3-border w3-large w3-margin-top">Micheal(10704395)</h2> </div>
+            <div class="w3-third w3-center"><h2 class="w3-hover-green   w3-large w3-margin-top">Micheal(10704395)</h2> </div>
         </div>
             <div class="w3-row-padding w3-center" style="margin: 15px 10px; ">
                
@@ -70,7 +70,7 @@
         </div>
       </div>
 
-      <footer class="w3-container">
+      <footer class="w3-container-fluid"  style="margin-top: 40px;">
        
         <div class=" w3-container w3-center w3-teal" style="padding: 0px">
             All Rights Reserved<br/>
